# nota-codec

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  flake.nix
.beads/: config.yaml  metadata.json
src/: decoder.rs  encoder.rs  error.rs  lexer.rs  lib.rs  pattern_field.rs  traits.rs
tests/: horizon_rs_feedback_fixes.rs  nexus_pattern_round_trip.rs  nexus_verb_round_trip.rs  nota_enum_round_trip.rs  nota_record_round_trip.rs  nota_transparent_round_trip.rs  nota_try_transparent_round_trip.rs  option_vec_struct_variant.rs  production_primitives.rs
