[package]
name         = "nota-codec"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/nota-codec"
description  = "Typed Decoder + Encoder for nota and nexus dialects. Replaces nota-serde-core + nota-serde + nexus-serde with a serde-free codec built around Token-enum dispatch and the NotaEncode/NotaDecode traits."

[dependencies]
nota-derive = { git = "https://github.com/LiGoldragon/nota-derive.git", rev = "159c35878f539272451c1d66055ce2c8269d3f2a" }
thiserror   = "2"

[lints.rust]
unused = "allow"
dead_code = "allow"
