[package]
name         = "nota-codec"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/nota-codec"
description  = "Typed Decoder + Encoder for nota and nexus dialects. Replaces nota-serde-core + nota-serde + nexus-serde with a serde-free codec built around Token-enum dispatch and the NotaEncode/NotaDecode traits."

[dependencies]
nota-derive = { git = "https://github.com/LiGoldragon/nota-derive.git", rev = "96633b7d7bd0fb6204d301401b4c08505277bf53" }
# rkyv carried with the canonical pinned-feature set per
# mentci/reports/074 — needed so `PatternField<T>` derives
# `Archive` and signal types containing it can do the same.
rkyv        = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
thiserror   = "2"

[lints.rust]
unused = "allow"
dead_code = "allow"
